--- a/css/common.css
+++ b/css/common.css
@@ -7,25 +7,25 @@
 
 body {
   margin: 16px;
-  font-family: 
+  /* font-family: 
   -apple-system, BlinkMacSystemFont,'Montserrat', 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
   background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;   
+  /* color: #212121; */
+  /* line-height: 1.5em;    */
 }
 
-input {
-  /* padding: 8px; */
+/* input {
+  padding: 8px;
   font: inherit;
 }
 
 button {
   padding: 8px 12px;
   cursor: pointer;
-}
+} */
 
 ul,
 li, h1 {
@@ -35,236 +35,46 @@ li, h1 {
   padding-left: 0px;
 }
 
-#categories {
-  color: #2E2F42;
-  display: inline-flex;
-  flex-direction: column;
-  padding: 24px;
-    
-    align-items: flex-start;
-    gap: 24px;
-    border-radius: 8px;
-    background: #FFF;
-    
-}
-.item {  
-  letter-spacing: 0.04em;
-  display: flex;
-  padding: 16px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
-  border-radius: 8px;
-  background: #F6F6FE;
-}
-
-.item h2 {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.33;
-  letter-spacing: 0.04em;
-  margin: 0px;  
-}
-
-.item ul {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.item li {
-  width: 360px;
-  height: 40px;
-  flex-shrink: 0;
-  border-radius: 4px;
-  border: 1px solid #808080;
-  display: flex;
-  align-items: center;
-  padding-left: 16px;
- }
-
- /* task-02 */
 img {
   /* прибираємо дефолтні margin-bottom зображенням */
   display: block;
   max-width: 100%;
 }
-.wraper-gallery {
-  background: #FFF;
-  display: flex;
-    width: 1440px;
-    height: 848px;
-    padding: 100px 156px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 48px;
-}
+
 .gallery {
   display: flex;
-  flex-direction: row;
-  gap: 24px;  
-}
-.frame {
-  width: 360px;
-  height: 300px;
+  max-width: 1440px;
+  /* height: 696px; */
+  padding: 24px 156px;
+  flex-direction: row;  
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  background: #FFF;
   
 }
-.frame img {
+.gallery-item {
+  display: flex;
+  max-width: calc((100% - 24px*2)/3); 
+  max-height: 200px;
+}
+
+.gallery-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-/* task-03 */
-.txt-field {
-  display: inline-flex;
-  padding: 24px;
-  flex-direction: column;  
-  gap: 16px;
-  border-radius: 8px;
-  background: #FFF;
-}
-#name-input {
-    width: 360px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid #808080;
-    padding-left: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    }
-#name-input::placeholder {
-    color: #2E2F42;
-    opacity: 1; /* скидаємо  непрозорість у Firefox */    
-    letter-spacing: 0.04em;    
-}
-.greeting {  
-  color: #2E2F42;
-  font-size: 24px;  
-  font-weight: 600; 
-  letter-spacing: 0.04em;
-  line-height: 1.33;       
-}
 
 
-/* task-04 */
-#form {
-  max-width: fit-content;
-  border-radius: 8px;
-  background: #FFF;  
-  padding: 24px;   
-}
 
-#form.login-form label {
+
  
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-bottom: 8px;
-}  
 
-#form.login-form input { 
-  width: 360px;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid #808080;  
-}
 
-#form.login-form button {
-  width:86px;
-  border: none;  
-  color: #FFF; 
-  letter-spacing: 0.04em;  
-  padding: 8px 16px;  
-  border-radius: 8px;
-  background:#4E75FF;
-  display: flex;
-  margin-top: 8px;
-  align-items: center;
-  justify-content: center;
-}
 
-/* task-05 */
 
-#widget.widget {
-display: inline-flex;
-padding: 100px 88px;
-flex-direction: column;
-align-items: center;
-border-radius: 8px;
-background: #FFF;
-}
 
-#widget.widget p {
-  color: #2E2F42;    
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;    
-  letter-spacing: 0.04em;
-}
-#widget.widget span {
-  font-family: inherit;
-}
 
-#widget.widget button {
-  border-radius: 8px;
-  background: #4E75FF;
-  border: none;
-  padding: 8px 16px;
-  color: #FFF;      
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;      
-  letter-spacing: 0.04em;
-}
 
-/* task-06 */
-
-.wraper-script {
-  display: inline-flex;
-  padding: 24px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;  
-  border-radius: 8px;
-  background: #FFF;
-}
-#controls{
-  display: flex;
-  padding: 32px;
-  gap: 16px;
-
-border-radius: 8px;
-  background: #F6F6FE;
-}
-#controls input{
-  text-align: center;  
-  width: 150px;
-  border-radius: 8px;
-  border: 1px solid #808080;
-}
-#controls button {
-  text-align: center;  
-  display: flex;
-  width: 120px;
-  padding: 8px 16px;
-  justify-content: center;    
-  border-radius: 8px;
-  border: none;
-  color:#FFFFFF;
-     
-    font-size: 16px;    
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-}
-#boxes{
-  display: flex;
-  min-width: 486px;
-  padding: 32px;  
-  gap: 16px;
-  border-radius: 8px;
-  background: #F6F6FE;
-}
