--- a/css/common.css
+++ b/css/common.css
@@ -66,6 +66,12 @@ img {
   object-fit: cover;
 }
 
+/* .gallery-image:hover {
+  cursor: url('../img/bxs_hand-down.png'), pointer;
+  transform: scale(1.025);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
 
 
 
