--- a/css/common.css
+++ b/css/common.css
@@ -60,17 +60,20 @@ img {
   max-height: 200px;
 }
 
+/* animation */
+.gallery-item:hover {
+  cursor: url('../img/bxs_hand-down.png'), pointer;
+  transform: scale(1.025);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .gallery-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-/* .gallery-image:hover {
-  cursor: url('../img/bxs_hand-down.png'), pointer;
-  transform: scale(1.025);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+
 
 
 
